# Specter

./: .gitignore  .graphifyignore  README.md  pyproject.toml
.agents/skills/architecture-first-changes/: SKILL.md
.agents/skills/atomic-git-commits/: SKILL.md
.agents/skills/continuous-integration/: SKILL.md
.agents/skills/investigation-debugging/: SKILL.md
.agents/skills/large-feature-decomposition/: SKILL.md
.agents/skills/minimal-context-coding/: SKILL.md
.codex/: hooks.json
.github/workflows/: ci.yml
docs/: validation_architecture.md
graphify-out/: .graphify_analysis.json  .graphify_labels.json  .graphify_labels.json.sig  GRAPH_REPORT 2.md  GRAPH_REPORT 3.md  GRAPH_REPORT.md  graph 2.html  graph 3.html  graph 3.json  graph 4.json  graph.html  graph.json  manifest 2.json  manifest 3.json  manifest.json
graphify-out/cache/: stat-index.json
notebooks/: specter_inference_correction_benchmark 2.ipynb  specter_inference_correction_benchmark.ipynb  specter_inference_correction_benchmark_bug_log.md
scripts/: install_graphify_auto_publish.py  publish_graphify_snapshot.py
src/specter/: __init__.py  artifacts.py  cli.py  config.py  dullahan_inference.py  graph_loader.py  ids.py  model_provider.py  text.py
src/specter/activation/: __init__.py  activation_locator.py  contrast_set_builder.py  hook_runner.py  models.py  transformerlens_adapter.py  transformerlens_locator.py
src/specter/courtroom/: __init__.py  contention_generator.py  debate_runner.py  models.py  role_prompts.py
src/specter/feedback/: __init__.py  apply_cli.py  apply_models.py  apply_runtime.py  feedback_loader.py  localize_cli.py  models.py  plan_builder.py  run_hooks_cli.py
tests/: test_benchmark_notebook.py  test_graphify_auto_publish.py  test_model_provider.py  test_real_inference.py  test_specter.py  test_transformerlens_adapter.py
