[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "specter"
version = "0.1.0"
description = "Validation and activation-steering layer for expert SLM action graph traces."
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
  "pydantic>=2.7,<3",
  "pyyaml>=6.0,<7",
]

[project.scripts]
specter-courtroom = "specter.cli:main"
specter-localize-feedback = "specter.feedback.localize_cli:main"
specter-apply-feedback = "specter.feedback.apply_cli:main"
specter-run-feedback-hooks = "specter.feedback.run_hooks_cli:main"

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9",
]
transformerlens = [
  "torch",
  "transformer-lens",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "local_inference: runs a real local model and is opt-in",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
